test/api/exception_caught.ref
a
caught 52
error: This should be visible
  [./exception_caught.ngjs:0:0] in ???()
    throw "This should be visible";
    ^

exit(12)
